Upgrade: Modernize instanceof patterns and switch expressions (phase 3)
- Replace old-style instanceof with pattern variables in YNetRunner (engine & stateless)
- Eliminate unnecessary type casts after instanceof checks in deadlock detection, cancellation, and isEmpty logic
- Modernize YCondition instanceof checks with pattern variables in conditional expressions
- Update YTask instanceof checks to use pattern variables and eliminate redundant casts
- Improve code readability and compiler-verified type safety in 10+ locations across engine module

Affected files:
- src/org/yawlfoundation/yawl/engine/YNetRunner.java: 4 instanceof patterns modernized
- src/org/yawlfoundation/yawl/stateless/engine/YNetRunner.java: 5 instanceof patterns modernized

https://claude.ai/code/session_01DQyKYNssXF6RTTUiSWtUqf